manifests/service-2.yml
apiVersion: v1
kind: Service
metadata:
    name: "aks-6f99"
    labels:
        app: "aks-6f99"
spec:
    type: ClusterIP
    ports:
    - port: 8501
      targetPort: 8501
      protocol: TCP
      name: http
    selector:
        app: "aks-6f99"
