manifests/ingress-1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "aks-4a06"
    labels:
        app: "aks-4a06"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: aks8137-aks-4a06.8f7a19970e25479bade5.westeurope.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "aks-4a06"
                servicePort: 8501
