manifests/ingress-2.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "aks-6f99"
    labels:
        app: "aks-6f99"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: aks8735-aks-6f99.8f7a19970e25479bade5.westeurope.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "aks-6f99"
                servicePort: 8501
