manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "aks-f4fc"
    labels:
        app: "aks-f4fc"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: default-aks-f4fc.8f7a19970e25479bade5.westeurope.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "aks-f4fc"
                servicePort: 8501
